Closed Bug 323946 Opened 20 years ago Closed 20 years ago

nsFieldSetFrame does not need a space manager

Categories

(Core :: Layout: Floats, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: roc, Assigned: roc)

References

Details

Attachments

(1 file)

nsFieldSetFrame's anonymous child block already has a space manager, so the only way nsFieldSetFrame's space manager can be used is if the legend contains floats, and then I think things are going to go wrong ... nsLegendFrame should have its own space manager. Then we can get rid of nsFieldSetFrame's space manager. This will create the reasonable invariant that only block frames have space managers.
Attached patch fixSplinter Review
Fix as described. This patch includes the fix for bug 309550. I've filed this bug separately with separate patches on the chance than the patch in bug 309550 might be wanted on branch. I've tested that this does not regress bug 200347, and works OK with floats in a legend.
Attachment #208912 - Flags: superreview?(dbaron)
Attachment #208912 - Flags: review?(dbaron)
Attachment #208912 - Flags: superreview?(dbaron)
Attachment #208912 - Flags: superreview+
Attachment #208912 - Flags: review?(dbaron)
Attachment #208912 - Flags: review+
Doesn't NS_NewLegendFrame need to actually return f?
checked in, with "return f;" added.
Status: NEW → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: