Bug 323946. nsFieldSetFrame doesn't need to support having a space manager. r+sr=dbaron